Complete X/Y Sphero Navigation for Single Spheros in Notebook Form

--- a/6-camera-sphero-calibration.ipynb
+++ b/6-camera-sphero-calibration.ipynb
@@ -61,12 +61,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Library written to help with tracking\n",
     "import SpheroTeam\n",
-    "from SpheroTeam.util import readJsonFile, normalize_angle, angle_between_points"
+    "from SpheroTeam.teamutil import readJsonFile, normalize_angle, angle_between_points"
    ]
   },
   {
@@ -93,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Config management\n",
@@ -104,7 +108,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Class for managing multiple spheros\n",
@@ -142,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Manually pick out the robots to include by specifying their abbreviation.\n",
@@ -174,7 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# All robots start with lights off to save power\n",
@@ -386,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Check which bot is which\n",
@@ -414,7 +426,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tracklist = [traceable_blue]"
@@ -473,7 +487,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Check video\n",
